--- a/config/environment.yaml
+++ b/config/environment.yaml
@@ -1,4 +1,9 @@
-OPENAI_BASE_URL=xxx123456
-OPENAI_API_KEY=xxx123456
+
+OPENAI_BASE_URL="https://dashscope.aliyuncs.com/compatible-mode/v1"
+OPENAI_API_KEY="sk-5f1feb55eba84394a2256422f997e07c"
 MIDSCENE_MODEL_NAME="qwen3-vl-plus"
 MIDSCENE_USE_QWEN3_VL=1
+$env:OPENAI_API_KEY="sk-5f1feb55eba84394a2256422f997e07c"
+$env:OPENAI_BASE_URL="https://dashscope.aliyuncs.com/compatible-mode/v1"
+$env:MIDSCENE_MODEL_NAME="qwen3-vl-plus"
+$env:MIDSCENE_USE_QWEN3_VL=1
